tests/errors/string_58/INT2CHAR2.src
.IPPcode21

DEFVAR GF@char
INT2CHAR GF@char int@89654799
WRITE GF@char
WRITE string@\010
